@@ -23,82 +23,63 @@ logger = logging.getLogger(__name__)
 
 @set_mplstyle
 @log_func_call(logger)
-def raw_data(chunk : CeiloChunk, show_ceilos : bool = False, show : bool = False,
-             save_stem : str = None, save_fmts : Union[list, str] = None,
-             ref_name : str = None, ref_metar : str = None) -> None:
-    """ A function to plot the raw data of a given CeiloChunk, possibly by coloring the hits as a
-    function of the ceilometer it originated from.
-
-    Args:
-        chunk (CeiloChunk): the CeiloChunk to look at.
-        show_ceilos (bool, optional): if True, hits will be colored as a function of the responsible
-            ceilometer. Defaults to False.
-        show (bool, optional): will show the plot on the screen if True. Defaults to False.
-        save_name (str, optional): if set, will save the plot at this location with this name.
-        ref_name (str, optional): name of the source of a reference METAR set with ref_metar.
-            Defaults to None.
-        ref_metar (str, optional): name of a reference METAR acquired by ref_name. Defaults to None.
-
-    """
-
-    # If the user gave me a unique file format, deal with it
-    if isinstance(save_fmts, str):
-        save_fmts = [save_fmts]
-
-    # Very well, let's start by instantiating a new DiagnosticPlot.
-    adp = DiagnosticPlot(chunk)
-
-    # Create a the plot I want
-    adp.show_hits_only(show_ceilos=show_ceilos)
-    adp.format_primary_axes()
-    adp.add_ceilo_count()
-    adp.add_geoloc_and_ref_dt()
-    adp.add_ref_metar(ref_name, ref_metar)
-
-    # Save it
-    adp.save(save_stem, fmts=save_fmts)
-
-@set_mplstyle
-@log_func_call(logger)
-def diagnostic(chunk : CeiloChunk, upto : str = 'layers', show : bool = False,
-               save_stem : str = None, save_fmts : Union[list, str] = None,
-               ref_name : str = None, ref_metar : str = None) -> None:
+def diagnostic(chunk : CeiloChunk, upto : str = 'layers', show_ceilos : bool = False,
+               ref_metar : str = None, ref_metar_origin : str = None,
+               show : bool = True,
+               save_stem : str = 'ampycloud', save_fmts : Union[list, str] = None) -> None:
     """ A function to create the ampycloud diagnostic plot all the way to the layering step
-    (included). THis is the ultimate ampycloud plot that shows it all.
+    (included). This is the ultimate ampycloud plot that shows it all.
 
     Args:
         chunk (CeiloChunk): the CeiloChunk to look at.
         upto (str, optional): up to which algorithm steps to plot. Can be one of
-            ['slices', 'groups', 'layers']. Defaults to 'layers'.
+            ['raw_data', 'slices', 'groups', 'layers']. Defaults to 'layers'.
+        show_ceilos (bool, optional): if True, hits will be colored as a function of the
+            responsible ceilometer. Defaults to False. No effects unless ``upto='raw data'``.
+        ref_metar (str, optional): reference METAR message. Defaults to None.
+        ref_metar_origin (str, optional): name of the source of the reference METAR set with
+            ref_metar. Defaults to None.
         show (bool, optional): will show the plot on the screen if True. Defaults to False.
-        save_name (str, optional): if set, will save the plot at this location with this name.
-        ref_name (str, optional): name of the source of a reference METAR set with ref_metar.
-            Defaults to None.
-        ref_metar (str, optional): name of a reference METAR acquired by ref_name. Defaults to None.
-
+        save_stem (str, optional): if set, will save the plot with this stem (which can include a
+            path as well). Deafults to 'ampycloud'.
+        save_fmts (list|str, optional): a list of file formats to export the plot to. Deafults to
+            None = ['pdf'].
 
     """
 
     # If the user gave me a unique file format, deal with it
     if isinstance(save_fmts, str):
         save_fmts = [save_fmts]
+    if save_fmts is None:
+        save_fmts = ['pdf']
 
     # Very well, let's start by instantiating a new DiagnosticPlot.
     adp = DiagnosticPlot(chunk)
-    adp.format_primary_axes()
-    adp.show_slices()
-    adp.format_slice_axes()
-    adp.add_ceilo_count()
-    adp.add_max_hits()
-    adp.add_geoloc_and_ref_dt()
+    if upto == 'raw_data':
+        adp.show_hits_only(show_ceilos=show_ceilos)
+    if upto in ['slices', 'groups', 'layers']:
+        adp.show_slices()
+        adp.format_slice_axes()
     if upto in ['groups', 'layers']:
         adp.show_groups(show_points= (upto=='groups'))
         adp.format_group_axes()
     if upto == 'layers':
         adp.show_layers()
+        adp.add_metar(synop=False)
 
-    adp.add_ref_metar(ref_name, ref_metar)
-    adp.add_metar(synop=False)
+    # And add all the common stuff
+    adp.add_ref_metar(ref_metar_origin, ref_metar)
+    adp.format_primary_axes()
+    adp.add_ceilo_count()
+    adp.add_max_hits()
+    adp.add_geoloc_and_ref_dt()
 
     # Save it
     adp.save(save_stem, fmts=save_fmts)
+
+    # Show it ?
+    if show:
+        adp.show()
+
+    # Close the figure to free the memory
+    adp.close_fig()
